<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">ControleDeCasa</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="botao_comandoVoz">Comando de Voz</string>
    <string name="botao_luzes">Luzes</string>
    <string name="botao_televisao">Televisão</string>
    <string name="botao_arCondicionado">Ar Condionado</string>
    <string name="botao_configuracao">Configuração</string>
    <string name="botao_consumo">Consumo de Energia</string>
    <string name="botao_lampadaSalaLigada">Lampada Sala Ligada</string>
    <string name="botao_lampadaSalaDesligada">Lampada Sala Desligada</string>
    <string name="botao_lampadaCozinhaLigada">Lampada Cozinha Ligada</string>
    <string name="botao_lampadaCozinhaDesligada">Lampada Cozinha Desligada</string>
    <string name="tituloLuzes">LUZES</string>
    <string name="title_activity_luzes">Luzes</string>
    <string name="botao_lampadaHallDesligada">Lampada Hall Desligada</string>
    <string name="botao_lampadaHallLigada">Lampada Hall Ligada</string>
    <string name="botao_lampadaBanheiroDesligada">Lampada Banheiro Desligada</string>
    <string name="botao_lampadaBanheiroLigada">Lampada Banheiro Ligada</string>
    <string name="botao_lampadaQuarto01Desligada">Lampada Quarto01 Desligada</string>
    <string name="botao_lampadaQuarto01Ligada">Lampada Quarto01 Ligada</string>
    <string name="botao_lampadaQuarto02Desligada">Lampada Quarto02 Desligada</string>
    <string name="botao_lampadaQuarto02Ligada">Lampada Quarto02 Ligada</string>
    <string name="title_activity_televisao">Televisão</string>
    <string name="title_activity_ar_condicionado">Ar Condicionado</string>
    <string name="title_activity_configuracao">Configuração</string>
    <string name="title_activity_consumo_energia">Consumo de Energia</string>
    
    <string name="txtUrl">URL</string>
    <string name="btnSalvar">Salvar</string>
    <string name="btnCancelar">Cancelar</string>
    
    

</resources>
