<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".ConfiguracaoActivity" >

    <TextView
        android:id="@+id/txtUrl"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txtUrl" />

    <EditText
        android:id="@+id/edtUrl"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/txtUrl"
        android:layout_below="@+id/txtUrl"
        android:ems="10"
        android:width="300dp" >

        <requestFocus />
    </EditText>

    <Button
        android:id="@+id/btnSalvar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/edtUrl"
        android:layout_below="@+id/edtUrl"
        android:text="@string/btnSalvar"
        android:width="150dp" />

    <Button
        android:id="@+id/btnCancelar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/btnSalvar"
        android:layout_toRightOf="@+id/btnSalvar"
        android:text="@string/btnCancelar"
        android:width="150dp" />

</RelativeLayout>