<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".PrincipalActivity" >

    <LinearLayout 
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:orientation="vertical">
	    
	    <LinearLayout
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content" >
	        <ImageView
	            android:id="@+id/imgComandoVoz"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:paddingTop="5dp"
	            android:paddingLeft="5dp"
	            android:paddingRight="5dp"
	            android:src="@drawable/ic_launcher" 
	            />
	        <Button
	            android:id="@+id/btnComandoVoz"
	            android:layout_width="fill_parent"
	            android:layout_height="wrap_content"
	            style="@style/fillWrap.button"
	            android:text="@string/botao_comandoVoz"
	            android:textColor="@color/white" 
	            android:textSize="23dp" />
	    </LinearLayout>
	    
	    <LinearLayout
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content" >
	        <ImageView
	            android:id="@+id/imgLuzes"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:paddingTop="5dp"
	            android:paddingLeft="5dp"
	            android:paddingRight="5dp"
	            android:src="@drawable/ic_launcher" 
	            />
	        <Button
	            android:id="@+id/btnLuzes"
	            android:layout_width="fill_parent"
	            android:layout_height="wrap_content"
	            style="@style/fillWrap.button"
	            android:text="@string/botao_luzes"
	            android:textColor="@color/white" 
	            android:textSize="23dp" />
	    </LinearLayout>
	    
	    <LinearLayout
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content" >
	        <ImageView
	            android:id="@+id/imgConfiguracao"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:paddingTop="5dp"
	            android:paddingLeft="5dp"
	            android:paddingRight="5dp"
	            android:src="@drawable/ic_launcher" 
	            />
	        <Button
	            android:id="@+id/btnConfiguracao"
	            android:layout_width="fill_parent"
	            android:layout_height="wrap_content"
	            style="@style/fillWrap.button"
	            android:text="@string/botao_configuracao"
	            android:textColor="@color/white" 
	            android:textSize="23dp" />
	    </LinearLayout>
	    
	    <LinearLayout
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content" >
	        <ImageView
	            android:id="@+id/imgTelevisao"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:paddingTop="5dp"
	            android:paddingLeft="5dp"
	            android:paddingRight="5dp"
	            android:src="@drawable/ic_launcher" 
	            />
	        <Button
	            android:id="@+id/btnTelevisao"
	            android:layout_width="fill_parent"
	            android:layout_height="wrap_content"
	            style="@style/fillWrap.button"
	            android:text="@string/botao_televisao"
	            android:textColor="@color/white" 
	            android:textSize="23dp" />
	    </LinearLayout>
	    
	    <LinearLayout
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content" >
	        <ImageView
	            android:id="@+id/imgArCondicionado"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:paddingTop="5dp"
	            android:paddingLeft="5dp"
	            android:paddingRight="5dp"
	            android:src="@drawable/ic_launcher" 
	            />
	        <Button
	            android:id="@+id/btnArCondicionado"
	            android:layout_width="fill_parent"
	            android:layout_height="wrap_content"
	            style="@style/fillWrap.button"
	            android:text="@string/botao_arCondicionado"
	            android:textColor="@color/white" 
	            android:textSize="23dp" />
	    </LinearLayout>
	    
	    <LinearLayout
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content" >
	        <ImageView
	            android:id="@+id/imgConsumo"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:paddingTop="5dp"
	            android:paddingLeft="5dp"
	            android:paddingRight="5dp"
	            android:src="@drawable/ic_launcher" 
	            />
	        <Button
	            android:id="@+id/btnConsumo"
	            android:layout_width="fill_parent"
	            android:layout_height="wrap_content"
	            style="@style/fillWrap.button"
	            android:text="@string/botao_consumo"
	            android:textColor="@color/white" 
	            android:textSize="23dp" />
	    </LinearLayout>
	</LinearLayout>

</ScrollView>
